--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,6 +36,14 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
+  xml: ^6.1.0
+  http: 0.13.5
+  grouped_list: ^5.1.2
+  flutter_dotenv: ^5.0.2
+  intl: ^0.18.0
+  flutter_cache_manager: ^3.3.0
+  badges: ^3.0.2
+
 
 dev_dependencies:
   flutter_test:
@@ -53,6 +61,10 @@ dev_dependencies:
 
 # The following section is specific to Flutter packages.
 flutter:
+
+  assets:
+    - .env
+    - assets/
 
   # The following line ensures that the Material Icons font is
   # included with your application, so that you can use the icons in
