--- a/.env
+++ b/.env
@@ -1,3 +1,4 @@
+### GAME CENTER URL ENDPOINT ###
 LIGUE1_LAST_GAME_URL=http://data.swiss-icehockey.ch/Statistics/ClubStatistic.aspx?keyid=fa844091-e3dd-4794-8472-fd6816a083c2
 LIGUE1_NEXT_GAME_URL=http://data.swiss-icehockey.ch/Statistics/ClubStatistic.aspx?keyid=67ed4c17-a42c-40be-81a6-9a330389a748
 LIGUE1_TODAY_GAME_URL=http://data.swiss-icehockey.ch/Statistics/ClubStatistic.aspx?keyid=9146f1e8-c8ef-4cd7-a24f-9062e3b3b40e
@@ -30,3 +31,17 @@ U13TOP_TODAY_GAME_URL=http://data.swiss-icehockey.ch/Statistics/ClubStatistic.as
 U13A_LAST_GAME_URL=http://data.swiss-icehockey.ch/Statistics/ClubStatistic.aspx?keyid=b47ef9c0-8221-4997-a8ea-7c778a41280f
 U13A_NEXT_GAME_URL=http://data.swiss-icehockey.ch/Statistics/ClubStatistic.aspx?keyid=389c3d22-8e59-4a06-bd55-416fb8701a33
 U13A_TODAY_GAME_URL=http://data.swiss-icehockey.ch/Statistics/ClubStatistic.aspx?keyid=c7e88471-2377-4d59-bff5-16a354857286
+
+### GAME CENTER IDENTIFIER ###
+HCDV_TEAM_ID=105462
+HCDV_LEAGUE_ID=3
+HCDV_U20_TEAM_ID=104914
+HCDV_U20_LEAGUE_ID=105
+HCDV_U17_TEAM_ID=104252
+HCDV_U17_LEAGUE_ID=25
+HCDV_U15_TEAM_ID=104056
+HCDV_U15_LEAGUE_ID=107
+HCDV_U13TOP_TEAM_ID=105237
+HCDV_U13TOP_LEAGUE_ID=31
+HCDV_U13A_TEAM_ID=104057
+HCDV_U13A_LEAGUE_ID=32
