correct bug when forfait score

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -66,7 +66,7 @@ flutter:
     - assets/
     - .git/
     - .git/refs/heads/
-    - .git/refs/heads/feature/
+  #  - .git/refs/heads/feature/
 
   # The following line ensures that the Material Icons font is
   # included with your application, so that you can use the icons in
